# observability-stack

./: .env  .env.splunk-poc.example  .gitignore  AGENTS.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  RELEASING.md  demo-install.sh  docker-compose.agent-eval-llm.yml  docker-compose.compat.yml  docker-compose.examples.yml  docker-compose.local-opensearch-dashboards.yml  docker-compose.local-opensearch.yml  docker-compose.otel-demo.yml  docker-compose.splunk-demo.yml  docker-compose.yml  install.sh  repo-rename-request.md
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: claude-code-plugin-release.yml  cli-installer-release-drafter.yml  cli-unit-tests.yml  docs-ci.yml  docs-deploy.yml  docs-pr-preview.yml  e2e.yml  helm-test.yml  publish-images.yml  release-drafter.yml
aws/cdk/: .gitignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
aws/cli-installer/: .npmignore  README.md  package-lock.json  package.json
charts/observability-stack/: .helmignore  Chart.yaml  README.md  SYNC.md  values-anonymous-auth.yaml  values.yaml
claude-code-observability-plugin/: CLAUDE.md
claude-code-observability-plugin/.claude-plugin/: plugin.json
claude-code-observability-plugin/docs/: INSTALL.md  USAGE.md
claude-code-observability-plugin/tests/: README.md  conftest.py  models.py  requirements.txt  test_properties.py  test_runner.py
compat/: README.md
compat/collector/: README.md  config.compat.yaml
docker-compose/: .env  README.md  docker-compose.yml
docker-compose/agent-eval-canary/: Dockerfile  README.md  eval_canary.py  pyproject.toml  requirements.txt
docker-compose/agent-eval-canary-llm/: Dockerfile  README.md  eval_canary_llm.py  pyproject.toml
docker-compose/alertmanager/: alertmanager.template.yml
docker-compose/canary/: Dockerfile  README.md  canary.py
docker-compose/cortex/: init-cortex-rules.py
docker-compose/data-prepper/: data-prepper-config.yaml  pipelines.template.yaml  pipelines.yaml
docker-compose/eval-canary/: eval_canary.py  requirements.txt
docker-compose/fault-panel/: Dockerfile  main.py
docker-compose/opensearch/: Dockerfile
docker-compose/opensearch-dashboards/: README.md  dashboard-opensearch-health.yaml  dashboard-pipeline-health.yaml  opensearch_dashboards.template.yml  opensearch_dashboards.yml  saved-queries-metrics.yaml  saved-queries-traces.yaml
docker-compose/opentelemetry-demo/: init-otel-demo-monitors.py
docker-compose/otel-collector/: config.yaml
docker-compose/prometheus/: prometheus.yml
docker-compose/splunk-otel-collector/: README.md  config.yaml
docs/: CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json
docs/public/: CNAME
docs/starlight-docs/: astro.config.mjs  create-placeholder-docs.js  package-lock.json  package.json
documentation/: DOCUMENTATION_COMPLETE.md  README.md  RESPONSIVE_VERIFICATION.md  STARLIGHT_INTEGRATION.md  TEST_RESULTS.md  astro.config.mjs  docs-quick-reference.md  lighthouse-report.json
documentation/starlight-docs/: create-placeholder-docs.js  package-lock.json  (+1 more)
examples/agent-evals/genai-sdk/: README.md  main.py  pyproject.toml  requirements.txt
examples/langchain-agents/bedrock/: README.md  main.py  pyproject.toml
examples/plain-agents/weather-agent/: Dockerfile  README.md  main.py  pyproject.toml  server.py
examples/strands-agents/code-assistant/: main.py  pyproject.toml
load-testing/: AGENTS.md  README.md  RESULTS.md  SIZING.md  run-remote.sh
open-stack/: README.md  package-lock.json  package.json
test/: checks.sh  e2e-install.sh  e2e.sh  helm-test.sh
(+406 files in other folders)
