[project]
name = "weather-agent"
version = "1.0.0"
description = "Plain Python weather agent with OpenTelemetry instrumentation for Observability Stack"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opensearch-genai-observability-sdk-py>=0.2.6",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
