[project]
name = "03-coding-assistant"
version = "0.1.0"
description = "Code Assistant Agent: Introducing the Next-Generation Coding Sidekick"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.0.1",
    "strands-agents-tools>=0.2.0",
    "strands-agents[otel]>=1.6.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0"
]
